# crazyflie-path-planning

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
notebooks/: mixed_integer_exploration.ipynb
src/path_planning/: __init__.py  omap.py  run_gcs.py  run_gcs_multi.py  sandbox.py  sweeps.py  sweeps_sandbox.py  trajectory.py  utils.py  viz.py
src/path_planning/algorithms/: __init__.py  cbs.py  gcs.py  path_planner.py  rrt.py
src/path_planning/algorithms/gcs_lib/: FreespacePolytopes.py  GraphOfConvexSets.py  plotting.py
tests/: example_test.py
